Bug 875305 - Replace slow webvtt caption selectors with classes. r=bz